--- a/neat/templates/archives.html
+++ b/neat/templates/archives.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ SITENAME }} - Archive{% endblock %}
 {% block content %}
-<h2>{{ SITENAME }} - Archive</h2>
+<h2>Archive</h2>
 <dl>
 {% for article in dates %}
     <dt>{{ article.locale_date }}</dt>
