--- a/neat/templates/base.html
+++ b/neat/templates/base.html
@@ -24,7 +24,7 @@
     <header id="main">
         <div class="container">
             <div class="logo">
-                <a href="index.html" title="Home">{{ SITENAME }}</a>
+                <a href="{{ SITEURL }}" title="Home">{{ SITENAME }}</a>
             </div>
         </div>
     </header>
