--- a/neat/templates/base.html
+++ b/neat/templates/base.html
@@ -79,8 +79,9 @@
     <footer>
         <div class="container footer">
             <span>Powered by <a href="http://docs.getpelican.com">
-                Pelican</a> using <a href="https://github.com/BYK/pelican-neat">
-                neat theme</a>.
+                Pelican</a> using the <a href="https://github.com/BYK/pelican-neat">
+                neat theme</a>. Site hosted by <a href="http://www.webfaction.com?affiliate=dominicrodger" title="Get hosted by WebFaction">WebFaction</a>.
+
             </span>
             <nav>
                 <ul>
