Trying out Digital Ocean

--- a/neat/templates/base.html
+++ b/neat/templates/base.html
@@ -91,7 +91,7 @@
         <div class="container footer">
             <span>Powered by <a href="http://docs.getpelican.com">
                 Pelican</a> using the <a href="https://github.com/BYK/pelican-neat">
-                neat theme</a>. Site hosted by <a href="http://www.webfaction.com?affiliate=dominicrodger" title="Get hosted by WebFaction">WebFaction</a>.
+                neat theme</a>. Site hosted by <a href="http://www.digitalocean.com" title="Get hosted by Digital Ocean">Digital Ocean</a>.
 
             </span>
             <nav>
