Remove footnotes from article previews

--- a/neat/static/style/screen.css
+++ b/neat/static/style/screen.css
@@ -155,6 +155,10 @@ article .body ul {
     margin-bottom: 10px;
 }
 
+article .summary sup {
+    display: none;
+}
+
 article ul.tags {
     float: right;
 }
