--- a/neat/templates/index.html
+++ b/neat/templates/index.html
@@ -8,7 +8,7 @@
             {% include "article_header.html" %}
         </header>
 
-        <div class="body">
+        <div class="body summary">
             {{ article.summary }}
         </div>
 
