Add referral code to make me incredibly rich

--- a/neat/templates/base.html
+++ b/neat/templates/base.html
@@ -91,7 +91,7 @@
         <div class="container footer">
             <span>Powered by <a href="http://docs.getpelican.com">
                 Pelican</a> using the <a href="https://github.com/BYK/pelican-neat">
-                neat theme</a>. Site hosted by <a href="http://www.digitalocean.com" title="Get hosted by Digital Ocean">Digital Ocean</a>.
+                neat theme</a>. Site hosted by <a href="http://www.digitalocean.com/?refcode=9ecca08ed68a" title="Get hosted by Digital Ocean (and use my referral code)">Digital Ocean</a>.
 
             </span>
             <nav>
